--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,48 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    
+    <!-- SECTION HEADER -->
+    <header class="flex">
+        <div id="logo" class="flex">
+            <figure>
+                <img src="./assets/img/mobile-logo.png" alt="logo boolean">
+            </figure>
+            <h1>Campo Minato</h1>
+        </div>
+        <div>
+            <form>
+                <!-- <label for="difficulty">Difficoltà:</label>
+                <select name="difficulty" id="difficulty">
+                    <option value="easy" id="easy">Easy</option>
+                    <option value="medium" id="medium">Medium</option>
+                    <option value="hard" id="hard">Hard</option>
+                </select> -->
+                <button id="playBtn">Play</button>
+            </form>
+        </div>
+    </header>
+    <!-- SECTION HEADER END -->
+
+    <!-- SECTION MAIN -->
+
+    <main>
+
+    </main>
+
+    <!-- SECTION MAIN END -->
+
+    <!-- SECTION FOOTER -->
+
+<footer class="flex">
+    <div>
+        <p>Made with by <a href="#">Boolean</a></p>
+    </div>
+</footer>
+
+    <!-- SECTION FOOTER END -->
     <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
