closing section comment & div id

--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
             </form>
         </div>
     </header>
-    <!-- SECTION HEADER END -->
+    <!-- !SECTION HEADER END -->
 
     <!-- SECTION MAIN -->
 
     <main>
+<div id="grid">
 
+</div>
     </main>
 
-    <!-- SECTION MAIN END -->
+    <!-- !SECTION MAIN END -->
 
     <!-- SECTION FOOTER -->
 
@@ -48,7 +50,7 @@
     </div>
 </footer>
 
-    <!-- SECTION FOOTER END -->
+    <!-- !SECTION FOOTER END -->
     <script src="./assets/js/main.js"></script>
 </body>
 
