grid creation w/style & classes

--- a/index.html
+++ b/index.html
@@ -34,21 +34,32 @@
 
     <!-- SECTION MAIN -->
 
-    <main>
-<div id="grid">
+    <main class="flex">
+        <div id="grid" class="flex">
+            <!-- <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div> -->
 
-</div>
+        </div>
     </main>
 
     <!-- !SECTION MAIN END -->
 
     <!-- SECTION FOOTER -->
 
-<footer class="flex">
-    <div>
-        <p>Made with by <a href="#">Boolean</a></p>
-    </div>
-</footer>
+    <footer class="flex">
+        <div>
+            <p>Made with by <a href="#">Boolean</a></p>
+        </div>
+    </footer>
 
     <!-- !SECTION FOOTER END -->
     <script src="./assets/js/main.js"></script>
