--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <option value="medium" id="medium">Medium</option>
                     <option value="hard" id="hard">Hard</option>
                 </select> -->
-                <button id="playBtn">Play</button>
+                <button id="playBtn" type="button">Play</button>
             </form>
         </div>
     </header>
