added difficulty selector w/ different grids

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         </div>
         <div>
             <form>
-                <!-- <label for="difficulty">Difficoltà:</label>
+                <label for="difficulty">Difficoltà:</label>
                 <select name="difficulty" id="difficulty">
                     <option value="easy" id="easy">Easy</option>
                     <option value="medium" id="medium">Medium</option>
                     <option value="hard" id="hard">Hard</option>
-                </select> -->
+                </select>
                 <button id="playBtn" type="button">Play</button>
             </form>
         </div>
@@ -36,17 +36,6 @@
 
     <main class="flex">
         <div id="grid" class="flex">
-            <!-- <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div> -->
 
         </div>
     </main>
@@ -57,7 +46,7 @@
 
     <footer class="flex">
         <div>
-            <p>Made with by <a href="#">Boolean</a></p>
+            <p>Made with &#x2665; by <a href="#">Boolean</a></p>
         </div>
     </footer>
 
